# exomaps

./: .gitignore  LAUNCH.sh  README.md  launch-chrome.sh  package-lock.json
.github/workflows/: ci.yml  desktop-release.yml  migrations.yml
00_ARCHITECTURE/: 00_SYSTEM_OVERVIEW.MD  02_COMPONENT_ARCHITECTURE.MD  03_SERVICES.MD  05_CLIENTS.MD  06_DATA_PIPELINE.MD  07_MESSAGING.MD  08_INFRASTRUCTURE.MD
01_SERVICES/01_GATEWAY/: app.py  campaign_dao.py  campaigns.py  requirements.txt  world_engine_proxy.py
01_SERVICES/02_PIPELINE/: requirements.txt
01_SERVICES/03_WORLD_ENGINE/: Dockerfile  __init__.py  app.py  engine.py  requirements.txt
02_CLIENT/VITA/: ARCHITECTURE.md  index.html  package-lock.json  tsconfig.json  vite.config.ts
02_CLIENTS/01_WEB/: package-lock.json  package.json
02_CLIENTS/02_DESKTOP/: index.html  package.json
02_CLIENTS/02_DESKTOP/src-tauri/: Cargo.toml  tauri.conf.json
02_CLIENTS/02_DESKTOP/src-tauri/src/: main.rs
02_CLIENTS/02_DESKTOP/src-tauri/src/cache/: generation_store.rs  mod.rs  world_state.rs
02_CLIENTS/02_DESKTOP/src-tauri/src/gpu/: benchmark.rs  camera.rs  planet_render.rs  renderer.rs  terrain.rs
02_CLIENTS/02_DESKTOP/src-tauri/src/simulation/: atmosphere.rs  biomes.rs  climate.rs  composition_v2.rs  interior.rs  mod.rs  render_profile_builder.rs  world_gen_pipeline.rs
02_CLIENTS/02_VITA/: tsconfig.json  vite.config.ts
02_CLIENTS/03_MOBILE/: App.tsx  README.md  tsconfig.json
02_CLIENTS/03_OMICRON/: SCOPE.md
04_INFRA/: Makefile  run.sh
05_DOCS/: INDEX.md
07_LOCALRUN/: Caddyfile  client-trust.sh  dnsmasq.conf  gunicorn.conf.py  run.sh  rundaily.sh  setup.sh
Z_deprecate/03_OMICRON/: Cargo.toml  README.md  run.sh
Z_deprecate/03_OMICRON/src/: ui.rs
Z_deprecate/03_OMICRON/src/renderer/: gpu.rs  graph.rs  scene.rs
Z_deprecate/03_OMICRON/src/shaders/: README.md  atmosphere.wgsl  focus_glow.wgsl  galaxy_bg.wgsl
memory/: MEMORY.md
(+369 files in other folders)
