[package]
name = "omicron"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omicron"
path = "src/main.rs"

[dependencies]
wgpu = { version = "0.20", features = ["wgsl"] }
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"
noise = "0.9"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
