[package]
name = "exomaps-desktop"
version = "0.1.0"
description = "ExoMaps Desktop — Tauri + wgpu native GPU planet generation"
authors = ["ExoMaps Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ──
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# ── GPU rendering ──
wgpu = "23"
bytemuck = { version = "1.20", features = ["derive"] }
pollster = "0.4"
winit = "0.30"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ──
tokio = { version = "1", features = ["full"] }

# ── HTTP client (for API calls) ──
reqwest = { version = "0.12", features = ["json"] }

# ── SQLite cache ──
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Math / noise ──
noise = "0.9"
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"

# ── Logging ──
log = "0.4"
env_logger = "0.11"

# ── Image encoding (for texture output) ──
image = "0.25"
base64 = "0.22"

# ── Lazy statics (Rust 1.77 compat — std::sync::LazyLock requires 1.80) ──
once_cell = "1.20"

# ── URL encoding for API calls ──
urlencoding = "2.1"

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
